--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,25 @@
 version: '3'
 
 services:
-#    db:
-#        image: postgres:10.1-alpine
-#        volumes:
-#            - postgres_data:/var/lib/postgresql/data/
-#        ports:
-#            - 5435:5435
+    db:
+        image: postgres:10.1-alpine
+        volumes:
+            - postgres_data:/var/lib/postgresql/data/
+        ports:
+            - 5435:5435
+        environment:
+            POSTGRES_PASSWORD: db_password123
+            POSTGRES_USER: postgres
+            POSGTRES_DB: postgres
     web:
         build: .
-        command: cd petition_service && gunicorn -w 4 petition_service.wsgi
-#        command: python petition_service/manage.py runserver 0.0.0.0:8000
+        working_dir: /app/petition_service
+        command: gunicorn -w 4 petition_service.wsgi:application --bind 0.0.0.0:8000
         volumes:
             - .:/app
         ports:
             - "80:8000"
         environment:
             - "DEBUG=1"
-#        depends_on: 
-#            - db
+        depends_on: 
+            - db
