--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,11 @@ services:
     web:
         build: .
         working_dir: /app/petition_service
-        command: gunicorn -w 4 petition_service.wsgi:application --bind 0.0.0.0:8000
+        command: gunicorn -w 4 petition_service.wsgi:application --bind 0.0.0.0:443 --keyfile /certs/ssl.key --certfile /certs/ssl.crt
         volumes:
             - .:/app
         ports:
-            - "80:8000"
+            - "443:443"
         environment:
             - "DEBUG=1"
         depends_on:
